syntax = "proto3";
option java_package = "com.bugenzhao.nga.protos.service";

import "DataModel.proto";

//
// sync
//

message SyncRequest {
  oneof value {
    ConfigureRequest configure = 1;
    LocalUserRequest local_user = 2;
    AuthRequest auth = 3;
    ContentParseRequest content_parse = 4;
    SubjectParseRequest subject_parse = 5;
    MarkNotificationReadRequest mark_noti_read = 6;
  }
}

message ConfigureRequest {
  Configuration config = 1;
  bool debug = 2;
}
message ConfigureResponse { optional string error = 1; }

message LocalUserRequest { string user_id = 1; }
message LocalUserResponse { optional User user = 1; }

message AuthRequest { AuthInfo info = 1; }
message AuthResponse {}

message ContentParseRequest { string raw = 1; }
message ContentParseResponse {
  oneof result {
    PostContent content = 1;
    string error = 2;
  }
}

message SubjectParseRequest { string raw = 1; }
message SubjectParseResponse { Subject subject = 1; }

message MarkNotificationReadRequest { repeated string ids = 1; }
message MarkNotificationReadResponse {}

//
// async
//

message AsyncRequest {
  oneof value {
    TopicListRequest topic_list = 1;
    TopicDetailsRequest topic_details = 2;
    SubforumFilterRequest subforum_filter = 3;
    ForumListRequest forum_list = 4;
    RemoteUserRequest remote_user = 5;
    PostVoteRequest post_vote = 6;
    TopicHistoryRequest topic_history = 7;
    HotTopicListRequest hot_topic_list = 8;
    ForumSearchRequest forum_search = 9;
    FavoriteTopicListRequest favorite_topic_list = 10;
    TopicFavorRequest topic_favor = 11;
    PostReplyFetchContentRequest post_reply_fetch_content = 12;
    PostReplyRequest post_reply = 13;
    FetchNotificationRequest fetch_notification = 14;
    UploadAttachmentRequest upload_attachment = 15;
    UserTopicListRequest user_topic_list = 16;
    UserPostListRequest user_post_list = 17;
    ShortMessageListRequest short_message_list = 18;
    ShortMessageDetailsRequest short_message_details = 19;
    ShortMessagePostRequest short_message_post = 20;
    TopicSearchRequest topic_search = 21;
  }
}

message TopicListRequest {
  enum Order {
    LAST_POST = 0;
    POST_DATE = 1;
  }

  ForumId id = 1;
  uint32 page = 2;
  bool sort_subforums = 4;
  Order order = 5;
  bool recommended_only = 6;
}
message TopicListResponse {
  Forum forum = 4;
  repeated Topic topics = 1;
  uint32 pages = 2;
  repeated Subforum subforums = 3;
}

message TopicDetailsRequest {
  string topic_id = 1;
  string fav = 3;
  string post_id = 4;
  string author_id = 5;
  uint32 page = 2;
  bool local_cache = 6;
}
message TopicDetailsResponse {
  Topic topic = 1;
  repeated Post replies = 2;
  string forum_name = 4;
  uint32 pages = 3;
  bool is_local_cache = 5;
}

message SubforumFilterRequest {
  enum Operation {
    SHOW = 0;
    BLOCK = 1;
  }
  Operation operation = 1;
  string forum_id = 2;
  string subforum_filter_id = 3;
}
message SubforumFilterResponse {}

message ForumListRequest {}
message ForumListResponse { repeated Category categories = 1; }

message RemoteUserRequest {
  string user_id = 1;
  string user_name = 2;
}
message RemoteUserResponse { optional User user = 1; }

message PostVoteRequest {
  enum Operation {
    UPVOTE = 0;
    DOWNVOTE = 1;
  }
  Operation operation = 1;
  PostId post_id = 2;
}
message PostVoteResponse {
  sint32 delta = 1;
  optional string error = 2; // not used
  VoteState state = 3;
}

message TopicHistoryRequest { uint64 limit = 1; }
message TopicHistoryResponse { repeated TopicSnapshot topics = 1; }

message HotTopicListRequest {
  enum DateRange {
    DAY = 0;
    WEEK = 1;
    MONTH = 2;
  }
  ForumId id = 1;
  DateRange range = 2;
  optional uint32 fetch_page_limit = 3;
  optional uint64 limit = 4;
}
message HotTopicListResponse {
  repeated Topic topics = 1;
  Forum forum = 2;
}

message ForumSearchRequest { string key = 1; }
message ForumSearchResponse { repeated Forum forums = 1; }

message FavoriteTopicListRequest { uint32 page = 1; }
message FavoriteTopicListResponse {
  repeated Topic topics = 1;
  uint32 pages = 2;
}

message TopicFavorRequest {
  enum Operation {
    ADD = 0;
    DELETE = 1;
  }
  string topic_id = 1;
  Operation operation = 2;
}
message TopicFavorResponse { bool is_favored = 1; }

message PostReplyFetchContentRequest { PostReplyAction action = 1; }
message PostReplyFetchContentResponse {
  string content = 1;
  optional string subject = 2;
  PostReplyVerbatim verbatim = 3;
}

message PostReplyRequest {
  PostReplyAction action = 1;
  string content = 2;
  optional string subject = 3;
  repeated PostAttachment attachments = 4;
}
message PostReplyResponse { string message = 1; }

message FetchNotificationRequest {}
message FetchNotificationResponse { repeated Notification notis = 1; }

message UploadAttachmentRequest {
  PostReplyAction action = 1;
  bytes file = 2;
}
message UploadAttachmentResponse { PostAttachment attachment = 1; }

message UserTopicListRequest {
  string author_id = 1;
  uint32 page = 2;
}
message UserTopicListResponse {
  repeated Topic topics = 1;
  uint32 pages = 2;
}

message UserPostListRequest {
  string author_id = 1;
  uint32 page = 2;
}
message UserPostListResponse { repeated TopicWithLightPost tps = 1; }

message ShortMessageListRequest { uint32 page = 1; }
message ShortMessageListResponse {
  repeated ShortMessage messages = 1;
  uint32 pages = 2;
}

message ShortMessageDetailsRequest {
  string id = 1;
  uint32 page = 2;
}
message ShortMessageDetailsResponse {
  repeated ShortMessagePost posts = 1;
  uint32 pages = 2;
}

message ShortMessagePostRequest {
  ShortMessagePostAction action = 1;
  string content = 2;
  string subject = 3;
  repeated string to = 4;
}
message ShortMessagePostResponse {}

message TopicSearchRequest {
  ForumId id = 1;
  uint32 page = 2;
  bool search_content = 3;
  bool recommended_only = 4;
  string key = 5;
}
message TopicSearchResponse {
  repeated Topic topics = 1;
  uint32 pages = 2;
}
